--- a/index.html
+++ b/index.html
@@ -10,177 +10,185 @@
 <body>
   <div class="page">
 
-    <div class="create-line-header"></div>
+    <div class="page__create-line page__create-line--header"></div>
+
     <header class="header">
-      <div class="logo logo_place_header">
+      <div class="header__logo header__logo--place-header">
         <img src="/images/logo_place_header.svg" alt="Яндекс практикум">
       </div>
-      <div class="header-text">
-        <h1 class="header-title">Научиться учиться</h1>
-        <p class="header-subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
-          <a href="#" class="link">Узнать -></a>
-        <p>
+      <div class="header__text">
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+          <a href="#" class="header__link">Узнать -></a>
+        </p>
       </div>
-      <div class="main-ilustration">
+      <div class="header__main-illustration">
         <img src="/images/two_again.png" alt="Опять двойка">
       </div>
-      <div class="square-pic"></div>
+      <div class="header__square-pic"></div>
     </header>
-    <div class="create-line-header"></div>
+
+    <div class="page__create-line page__create-line--header"></div>
 
     <main class="content">
-      <div class="create-line-description"></div>
+      <div class="page__create-line page__create-line--description"></div>
       <section class="description">
-        <div class="two-columns">
-          <div class="two-columns_brief">Главные проблемы в обучении</div>
-          <div class="main-text">
-            <div class="two-columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
-            <div class="two-columns_paragraph"><span class="two-columns_span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
-            <div class="two-columns_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>
+        <div class="description__two-columns">
+          <div class="description__brief">Главные проблемы в обучении</div>
+          <div class="description__main-text">
+            <div class="description__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
+            <div class="description__paragraph"><span class="description__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
+            <div class="description__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>
           </div>
         </div>
-        <div class="create-line-description_bottom"></div>
+        <div class="page__create-line page__create-line--description-bottom"></div>
       </section>
 
       <section class="digits">
-        <div class="create-line-digits"></div>
-        <h2 class="digits-title">Цифры и факты</h2>
-        <div class="digits-subtitle">Про учёбу и мозг</div>
-        <div class="table">
-          <div class="table-cell">
-            <h3 class="table-heading">86 миллиардов</h3>
-            <p class="table-text">Число нейронов в мозге человека</p>
+        <div class="page__create-line page__create-line--digits"></div>
+        <h2 class="digits__title">Цифры и факты</h2>
+        <div class="digits__subtitle">Про учёбу и мозг</div>
+        <div class="digits__table">
+          <div class="digits__table-cell">
+            <h3 class="digits__table-heading">86 миллиардов</h3>
+            <p class="digits__table-text">Число нейронов в мозге человека</p>
           </div>
-          <div class="table-cell">
-            <h3 class="table-heading">2.1 миллиарда</h3>
-            <p class="table-text">Число нуждающихся в повышении квалификации</p>
-            <p class="table-text">Всемирный Банк, 2017</p>
+          <div class="digits__table-cell">
+            <h3 class="digits__table-heading">2.1 миллиарда</h3>
+            <p class="digits__table-text">Число нуждающихся в повышении квалификации</p>
+            <p class="digits__table-text">Всемирный Банк, 2017</p>
           </div>
-          <div class="table-cell">
-            <h3 class="table-heading">1000 терабайт</h3>
-            <p class="table-text">Объём памяти человека</p>
+          <div class="digits__table-cell">
+            <h3 class="digits__table-heading">1000 терабайт</h3>
+            <p class="digits__table-text">Объём памяти человека</p>
           </div>
-          <div class="table-cell">
-            <h3 class="table-heading">500 триллионов</h3>
-            <p class="table-text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <div class="digits__table-cell">
+            <h3 class="digits__table-heading">500 триллионов</h3>
+            <p class="digits__table-text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
-          <div class="table-cell">
-            <h3 class="table-heading">420 миллионов</h3>
-            <p class="table-text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table-text">Всемирный Банк, 2017</p>
+          <div class="digits__table-cell">
+            <h3 class="digits__table-heading">420 миллионов</h3>
+            <p class="digits__table-text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="digits__table-text">Всемирный Банк, 2017</p>
           </div>
-          <div class="table-cell">
-            <h3 class="table-heading">17–20 лет</h3>
-            <p class="table-text">Пик обучаемости</p>
+          <div class="digits__table-cell">
+            <h3 class="digits__table-heading">17–20 лет</h3>
+            <p class="digits__table-text">Пик обучаемости</p>
           </div>
-          <div class="table-cell">
-            <h3 class="table-heading">1885 год</h3>
-            <p class="table-text">Открытие кривой забывания</p>
+          <div class="digits__table-cell">
+            <h3 class="digits__table-heading">1885 год</h3>
+            <p class="digits__table-text">Открытие кривой забывания</p>
           </div>
-          <div class="table-cell">
-            <h3 class="table-heading">1889 год</h3>
-            <p class="table-text">Открытие условного рефлекса</p>
+          <div class="digits__table-cell">
+            <h3 class="digits__table-heading">1889 год</h3>
+            <p class="digits__table-text">Открытие условного рефлекса</p>
           </div>
         </div>
-        <div class="create-line-digits_bottom"></div>
+        <div class="page__create-line page__create-line--digits-bottom"></div>
       </section>
 
       <section class="feynman">
-        <div class="create-line-feynman"></div>
-        <h2 class="feynman-title">Метод Фейнмана</h2>
-        <p class="feynman-subtitle">Выучить и не забыть.</p>
-        <div class="feynman-link">
-          <a href="#" class="link">Подробнее -></a>
+        <div class="page__create-line page__create-line--feynman"></div>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <div class="feynman__link">
+          <a href="#" class="feynman__link-text">Подробнее -></a>
         </div>
-        <div class="feynman-ilustration">
+        <div class="feynman__illustration">
           <img src="/images/feynman.png" alt="Фейнман">
         </div>
       </section>
-      <div class="create-line-feynman_bottom"></div>
-      <div class="black-background"></div>
-      <div class="create-line-kaufman"></div>
+
+      <div class="page__create-line page__create-line--feynman-bottom"></div>
+      <div class="page__black-background"></div>
+      <div class="page__create-line page__create-line--kaufman"></div>
+
       <section class="kaufman">
-        <div class="kaufman-section-title">Принципы обучения</div>
-        <div class="kaufman-section-subtitle">от Джоша Кауфмана</div>
-        <div class="kaufman-table">
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">1</p>
-            <p class="kaufman-table-text">Выберите привлекательный проект.</p>
+        <div class="kaufman__section-title">Принципы обучения</div>
+        <div class="kaufman__section-subtitle">от Джоша Кауфмана</div>
+        <div class="kaufman__table">
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">1</p>
+            <p class="kaufman__table-text">Выберите привлекательный проект.</p>
           </div>
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">2</p>
-            <p class="kaufman-table-text">Сосредоточьтесь на каком-то одном навыке.</p>
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">2</p>
+            <p class="kaufman__table-text">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">3</p>
-            <p class="kaufman-table-text">Определите целевой уровень мастерства.</p>
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">3</p>
+            <p class="kaufman__table-text">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">4</p>
-            <p class="kaufman-table-text">Разбейте навык на элементы.</p>
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">4</p>
+            <p class="kaufman__table-text">Разбейте навык на элементы.</p>
           </div>
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">5</p>
-            <p class="kaufman-table-text">Приготовьте всё необходимое для занятий.</p>
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">5</p>
+            <p class="kaufman__table-text">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">6</p>
-            <p class="kaufman-table-text">Устраните препятствия для занятий.</p>
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">6</p>
+            <p class="kaufman__table-text">Устраните препятствия для занятий.</p>
           </div>
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">7</p>
-            <p class="kaufman-table-text">Выделите специальное время для занятий.</p>
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">7</p>
+            <p class="kaufman__table-text">Выделите специальное время для занятий.</p>
           </div>
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">8</p>
-            <p class="kaufman-table-text">Создайте быстрые петли обратной связи.</p>
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">8</p>
+            <p class="kaufman__table-text">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">9</p>
-            <p class="kaufman-table-text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">9</p>
+            <p class="kaufman__table-text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="kaufman-table-cell">
-            <p class="kaufman-table-heading">10</p>
-            <p class="kaufman-table-text">Уделяйте внимание количеству и скорости.</p>
+          <div class="kaufman__table-cell">
+            <p class="kaufman__table-heading">10</p>
+            <p class="kaufman__table-text">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman-triangle">
+        <div class="kaufman__triangle">
           <img src="/images/kaufman-triangle.svg" alt="Треугольник">
         </div>
       </section>
-      <div class="create-line-kaufman_bottom"></div>
+
+      <div class="page__create-line page__create-line--kaufman-bottom"></div>
     </main>
-    <div class="black-background"></div>
-    <div class="create-line-main"></div>
-    <div class="black-background-main"></div>
+
+    <div class="page__black-background"></div>
+    <div class="page__create-line page__create-line--main"></div>
+    <div class="page__black-background-main"></div>
+
     <footer class="footer">
-      <div class="create-line-footer"></div>
-      <div class="footer-columns">
-        <div class="footer-column-content_copyright">
-          <div class="logo logo_place_footer">
+      <div class="page__create-line page__create-line--footer"></div>
+      <div class="footer__columns">
+        <div class="footer__column-content footer__column-content--copyright">
+          <div class="footer__logo footer__logo--place-footer">
             <img src="/images/logo_place_footer.svg" alt="Яндекс практикум">
           </div>
-          <p class="footer-author">&copy Даниил Якимкин</p>
+          <p class="footer__author">&copy Даниил Якимкин</p>
         </div>
-        <div class="footer-column-content_info">
-          <p class="footer-column-heading">О Практикуме</p>
-          <a href="#" class="footer-column-links">Главная</a>
-          <a href="#" class="footer-column-links">Концепция</a>
-          <a href="#" class="footer-column-links">Наставники</a>
+        <div class="footer__column-content footer__column-content--info">
+          <p class="footer__column-heading">О Практикуме</p>
+          <a href="#" class="footer__column-link">Главная</a>
+          <a href="#" class="footer__column-link">Концепция</a>
+          <a href="#" class="footer__column-link">Наставники</a>
         </div>
-        <div class="footer-column-content_social">
-          <p class="footer-column-heading">Соцсети</p>
-          <a href="#" class="footer-column-links">
-            <img class="footer-column-link" src="images/youtube_color_white.svg">YouTube</a>
-          <a href="#" class="footer-column-links">
-            <img class="footer-column-link" src="images/vk_color_white.svg">ВКонтакте</a>
-          <a href="#" class="footer-column-links">
-            <img class="footer-column-link" src="images/tiktok_color_white.svg">TikTok</a>
+        <div class="footer__column-content footer__column-content--social">
+          <p class="footer__column-heading">Соцсети</p>
+          <a href="#" class="footer__column-link">
+            <img class="footer__column-icon" src="images/youtube_color_white.svg">YouTube</a>
+          <a href="#" class="footer__column-link">
+            <img class="footer__column-icon" src="images/vk_color_white.svg">ВКонтакте</a>
+          <a href="#" class="footer__column-link">
+            <img class="footer__column-icon" src="images/tiktok_color_white.svg">TikTok</a>
         </div>
       </div>
-      <div class="create-line-footer_bottom"></div>
-      <div class="black-background-footer"></div>
+      <div class="page__create-line page__create-line--footer-bottom"></div>
+      <div class="page__black-background-footer"></div>
     </footer>
+
   </div>
 </body>
 </html>
